clang-ir/tests/snapshots/snapshot_fixtures__fixtures__long_double_union_representation.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/long_double_union_representation.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn convert(%arg0: long_double<f80>) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: long_double<f80>):
        %9 = alloca long_double<f80>, "value", align 16
        %10 = alloca s32i, "__retval", align 4
        %11 = alloca rec_anon2E0, "bits", align 16
        store %arg0, %9
        %12 = const 0 : u64i
        %13 = const 0 : s64i
        get_member
        get_element
        store %12, %15, align 16
        %16 = const 0 : u64i
        %17 = const 1 : s64i
        get_member
        get_element
        store %16, %19, align 8
        %20 = load %9 : long_double<f80>, align 16
        get_member
        store %20, %21, align 16
        get_member
        %23 = load %22 : long_double<f80>, align 16
        %24 = cast(float_to_int) %23 : s32i
        store %24, %10
        %25 = load %10 : s32i
        return %25
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[4]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = const 6.750000e+00 : long_double<f80>
        %6 = call @convert(%5) : s32i [all]
        %7 = call @printf(%4, %6) : s32i [all]
        %8 = load %0 : s32i
        return %8
}
